--- a/admin/package.json
+++ b/admin/package.json
@@ -10,8 +10,11 @@
   "dependencies": {
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
+    "echarts": "^4.8.0",
     "element-ui": "^2.4.5",
+    "tslib": "^2.3.1",
     "vue": "^2.6.10",
+    "vue-echarts": "^6.0.0",
     "vue-router": "^3.0.3",
     "vue2-editor": "^2.6.6"
   },
@@ -19,9 +22,12 @@
     "@vue/cli-plugin-babel": "^3.7.0",
     "@vue/cli-plugin-eslint": "^3.7.0",
     "@vue/cli-service": "^3.7.0",
+    "@vue/composition-api": "^1.3.3",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "sass": "^1.20.1",
+    "sass-loader": "^7.1.0",
     "vue-cli-plugin-element": "^1.0.1",
     "vue-template-compiler": "^2.5.21"
   },
