--- a/admin/package.json
+++ b/admin/package.json
@@ -11,10 +11,11 @@
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
     "echarts": "^4.8.0",
-    "element-ui": "^2.4.5",
+    "element-ui": "^2.15.6",
     "tslib": "^2.3.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
+    "vue-table-with-tree-grid": "^0.2.4",
     "vue2-editor": "^2.6.6"
   },
   "devDependencies": {
