--- a/admin/package.json
+++ b/admin/package.json
@@ -12,6 +12,7 @@
     "core-js": "^2.6.5",
     "echarts": "^4.8.0",
     "element-ui": "^2.15.6",
+    "nprogress": "^0.2.0",
     "tslib": "^2.3.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
