--- a/admin/package.json
+++ b/admin/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
+    "dayjs": "^1.10.7",
     "echarts": "^4.8.0",
     "element-ui": "^2.15.6",
     "nprogress": "^0.2.0",
