--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "dayjs": "^1.8.14",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-burger-menu": "^2.0.5",
     "vue-router": "^3.0.3"
   },
   "devDependencies": {
