--- a/web/package.json
+++ b/web/package.json
@@ -11,8 +11,9 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "dayjs": "^1.8.14",
+    "swiper": "^5.4.1",
     "vue": "^2.6.10",
-    "vue-awesome-swiper": "^3.1.3",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-burger-menu": "^2.0.5",
     "vue-router": "^3.0.3"
   },
