--- a/server/package.json
+++ b/server/package.json
@@ -14,10 +14,12 @@
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^5.0.0-alpha.7",
+    "express-validator": "^6.14.0",
     "http-assert": "^1.4.1",
     "inflection": "^1.12.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
+    "morgan": "^1.10.0",
     "multer": "^1.4.1",
     "multer-aliyun-oss": "^1.0.1",
     "require-all": "^3.0.0"
