fix array index mistake

--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "core-js": "^2.6.5",
     "dayjs": "^1.8.14",
     "swiper": "^5.4.1",
+    "vant": "^2.12.38",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^4.1.1",
     "vue-burger-menu": "^2.0.5",
@@ -22,6 +23,7 @@
     "@vue/cli-plugin-eslint": "^3.7.0",
     "@vue/cli-service": "^3.7.0",
     "babel-eslint": "^10.0.1",
+    "babel-plugin-import": "^1.13.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "sass": "^1.20.1",
